--- a/pom.xml
+++ b/pom.xml
@@ -67,9 +67,9 @@
     <version.org.jboss.ejb3.context>0.3.0</version.org.jboss.ejb3.context>
     <version.org.jboss.ejb3.effigy>0.2.0</version.org.jboss.ejb3.effigy>
     <version.org.jboss.ejb3.ejbref.resolver>1.0.0-alpha-4</version.org.jboss.ejb3.ejbref.resolver>
-    <version.org.jboss.ejb3.heks>0.1.2-SNAPSHOT</version.org.jboss.ejb3.heks>
+    <version.org.jboss.ejb3.heks>0.1.2</version.org.jboss.ejb3.heks>
     <version.org.jboss.ejb3.instantiator>1.0.0-alpha-4</version.org.jboss.ejb3.instantiator>
-    <version.org.jboss.ejb3.jndibinder>0.1.6-SNAPSHOT</version.org.jboss.ejb3.jndibinder>
+    <version.org.jboss.ejb3.jndibinder>0.1.6</version.org.jboss.ejb3.jndibinder>
     <version.org.jboss.ejb3.nointerface>1.0.0-alpha-11</version.org.jboss.ejb3.nointerface>
     <version.org.jboss.ejb3.proxy>1.0.0-alpha-1</version.org.jboss.ejb3.proxy>
     <version.org.jboss.ejb3.singleton>1.0.0-alpha-24</version.org.jboss.ejb3.singleton>
